// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell-filling functions - boxes fillBoxes should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |  6  ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |     ❚     |     |     ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |     |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|     |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |     |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |  5  |
=======================================================
|     |     |  3  ❚  1  |  9  |     ❚  8  |  2  |     |
-------------------------------------------------------
|  1  |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Cell-filling functions - rows and columns cellCanBeDeterminedForRow fillColumns (phil collims?) should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |     ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |  4  ❚     |     |  9  ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |  9  |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|     |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |     |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |     |
=======================================================
|     |     |  3  ❚  1  |  9  |     ❚  8  |  2  |     |
-------------------------------------------------------
|     |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Cell-filling functions - rows and columns fillRows should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |     ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |     ❚     |     |     ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |  9  |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|  7  |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |  2  |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |     |
=======================================================
|     |     |  3  ❚  1  |  9  |  7  ❚  8  |  2  |     |
-------------------------------------------------------
|     |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Orchestration functions fillCellsLogically should match snapshot after processing 1`] = `
"-------------------------------------------------------
|  1  |  8  |  3  ❚  4  |  9  |  6  ❚  2  |  7  |  5  |
-------------------------------------------------------
|  5  |  2  |  4  ❚  3  |  7  |  8  ❚  6  |  1  |  9  |
-------------------------------------------------------
|  6  |  7  |  9  ❚  2  |  1  |  5  ❚  4  |  8  |  3  |
=======================================================
|  2  |  3  |  7  ❚  6  |  5  |  9  ❚  1  |  4  |  8  |
-------------------------------------------------------
|  9  |  6  |  1  ❚  8  |  3  |  4  ❚  5  |  2  |  7  |
-------------------------------------------------------
|  8  |  4  |  5  ❚  7  |  2  |  1  ❚  9  |  3  |  6  |
=======================================================
|  3  |  9  |  2  ❚  5  |  4  |  7  ❚  8  |  6  |  1  |
-------------------------------------------------------
|  7  |  1  |  8  ❚  9  |  6  |  2  ❚  3  |  5  |  4  |
-------------------------------------------------------
|  4  |  5  |  6  ❚  1  |  8  |  3  ❚  7  |  9  |  2  |
-------------------------------------------------------"
`;
